Fix IE slider images from being too tall.
- Fix IE slider images from being too tall, by adding max-height.
- Removed duplicated capitalize() from service mails

--- a/style/slider.less
+++ b/style/slider.less
@@ -366,6 +366,10 @@ Z-indexes:
     .slider-counter {
         margin-top: 8px;
     }
+    // Non-ig images could scale to silly heights while max was missing.
+    .small-slider li img {
+        max-height: 280px;
+    }
 }
 
 #expandSlider {
